force-app/main/default/objects/Contact/fields/contact_utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>contact_utm_campaign__c</fullName>
    <description>UTM Campaign field that Identifies the campaign.</description>
    <label>UTM Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>