force-app/main/default/objects/Contact/fields/contact_utm_source__c.field-meta.xml
<CustomField>
    <fullName>contact_utm_source__c</fullName>
    <description>UTM Source that Identifies the source of the traffic, such as Google or AdWords. (This can be different from Lead Source.)</description>
    <label>UTM Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>