force-app/main/default/objects/Contact/fields/contact_utm_term__c.field-meta.xml
<CustomField>
    <fullName>contact_utm_term__c</fullName>
    <description>UTM Term field that Identifies keywords that generate clicks.</description>
    <label>UTM Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>