force-app/main/default/objects/Contact/fields/EvergageFilters__c.field-meta.xml
<CustomField>
    <fullName>EvergageFilters__c</fullName>
    <description>Evergage matching filters</description>
    <label>Evergage Filters</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>