force-app/main/default/objects/Contact/fields/EvergageFirstActivity__c.field-meta.xml
<CustomField>
    <fullName>EvergageFirstActivity__c</fullName>
    <description>First activity with application</description>
    <label>Evergage First Visit</label>
    <type>DateTime</type>
</CustomField>