force-app/main/default/objects/Contact/fields/GLPA_Numero_de_documento__c.field-meta.xml
<CustomField>
    <fullName>GLPA_Numero_de_documento__c</fullName>
    <description>GLPA-1243 - Necessary to fulfill the business needs of the Miski Mayo in case creation and case management.</description>
    <label>Numero de documento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>