force-app/main/default/objects/Contact/fields/GLPA_Pol_tica_de_Privacidad__c.field-meta.xml
<CustomField>
    <fullName>GLPA_Pol_tica_de_Privacidad__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GLPA-1243 - Necessary to fulfill the business needs of the Miski Mayo in case creation and case management.</description>
    <label>Política de Privacidad</label>
    <type>Checkbox</type>
</CustomField>