force-app/main/default/objects/Contact/fields/GLPA_T_rminos_y_Condiciones__c.field-meta.xml
<CustomField>
    <fullName>GLPA_T_rminos_y_Condiciones__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GLPA-1243 - Necessary to fulfill the business needs of the Miski Mayo in case creation and case management.</description>
    <label>Términos y Condiciones</label>
    <type>Checkbox</type>
</CustomField>