force-app/main/default/objects/Contact/fields/GLPA_Tipo_de_documento_de_identidad__c.field-meta.xml
<CustomField>
    <fullName>GLPA_Tipo_de_documento_de_identidad__c</fullName>
    <description>GLPA-1243- Necessary to fulfill the business needs of the Miski Mayo in case creation and case management.</description>
    <label>Tipo de documento de identidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DNI</fullName>
            </value>
            <value>
                <fullName>RUC</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>