force-app/main/default/objects/Contact/fields/Numero_de_documento_de_identidad__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_documento_de_identidad__c</fullName>
    <label>Numero de documento de identidad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>