force-app/main/default/objects/Contact/fields/PMC_CLM_CourtesyCopy__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_CourtesyCopy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include this user as a Courtesy Copy recipients when generating contracts.</description>
    <label>Courtesy Copy</label>
    <type>Checkbox</type>
</CustomField>