force-app/main/default/objects/Contact/fields/PMC_DH_Approver__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Approver)</relationshipLabel>
    <relationshipName>PMC_DH_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>