force-app/main/default/objects/Contact/fields/PMC_DH_CountryCode__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_CountryCode__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US +1</fullName>
                <default>true</default>
                <label>US +1</label>
            </value>
            <value>
                <fullName>CA +1</fullName>
            </value>
            <value>
                <fullName>BR +55</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>