force-app/main/default/objects/Contact/fields/PMC_DH_Language__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Language__c</fullName>
    <description>Language</description>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>