force-app/main/default/objects/Contact/fields/PMC_DH_MarketingEmailConsent__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_MarketingEmailConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Email Consent</label>
    <type>Checkbox</type>
</CustomField>