force-app/main/default/objects/Contact/fields/PMC_DH_Preferences__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Preferences__c</fullName>
    <label>Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Access documents</fullName>
            </value>
            <value>
                <fullName>Browse Knowledge articles</fullName>
            </value>
            <value>
                <fullName>Manage contracts</fullName>
            </value>
            <value>
                <fullName>Manage leads</fullName>
            </value>
            <value>
                <fullName>Request quotes or place orders</fullName>
            </value>
            <value>
                <fullName>Track orders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>