force-app/main/default/objects/Contact/fields/PMC_MKT_Marketing_Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>PMC_MKT_Marketing_Product_Interest__c</fullName>
    <description>Product Interest coming from Lead Forms</description>
    <label>Marketing Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aspire</fullName>
            </value>
            <value>
                <fullName>Biopath</fullName>
            </value>
            <value>
                <fullName>Microessentials</fullName>
            </value>
            <value>
                <fullName>Powercoat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>