force-app/main/default/objects/Contact/fields/PMC_Source__c.field-meta.xml
<CustomField>
    <fullName>PMC_Source__c</fullName>
    <description>Origin / Source of creation of the contact</description>
    <inlineHelpText>This field will track the source of creation 
1. Use Case for DH - to track self registration requests</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>Digital Hub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>