force-app/main/default/objects/Contact/fields/PMC_SS_AccountsReceivable__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AccountsReceivable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether the Contact is needed in SAP for Account Receivables.</description>
    <label>Accounts Receivable</label>
    <type>Checkbox</type>
</CustomField>