force-app/main/default/objects/Contact/fields/PMC_SS_ClientDenied__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ClientDenied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>States if Client is on Denied List</description>
    <label>Client Denied</label>
    <type>Checkbox</type>
</CustomField>