force-app/main/default/objects/Contact/fields/PMC_SS_ContractRecipient__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ContractRecipient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether the Contact is needed in SAP for receiving Contract.</description>
    <label>Contract Recipient</label>
    <type>Checkbox</type>
</CustomField>