force-app/main/default/objects/Contact/fields/PMC_SS_Counterparty__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Counterparty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether the Contact is Counterparty in SAP.</description>
    <label>Counterparty</label>
    <type>Checkbox</type>
</CustomField>