force-app/main/default/objects/Contact/fields/PMC_SS_CPF__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CPF__c</fullName>
    <description>States the CPF Number</description>
    <label>CPF</label>
    <length>25</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>