force-app/main/default/objects/Contact/fields/PMC_SS_DigitalHubUser__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_DigitalHubUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notes whether a Contact has DH access</description>
    <label>Digital Hub User</label>
    <type>Checkbox</type>
</CustomField>