force-app/main/default/objects/Contact/fields/PMC_SS_InvoiceRecipient__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_InvoiceRecipient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether the Contact is needed in SAP for Invoicing</description>
    <label>Invoice Recipient</label>
    <type>Checkbox</type>
</CustomField>