force-app/main/default/objects/Contact/fields/PMC_SS_LastInteractionDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_LastInteractionDate__c</fullName>
    <description>Specifies the last interaction date of the Contact</description>
    <label>Last Interaction Date</label>
    <type>DateTime</type>
</CustomField>