force-app/main/default/objects/Contact/fields/PMC_SS_MDMVerified__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_MDMVerified__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Details whether an Account has been Verified by MDM Team</description>
    <label>MDM Verified</label>
    <type>Checkbox</type>
</CustomField>