force-app/main/default/objects/Contact/fields/PMC_SS_Name__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Name__c</fullName>
    <formula>TEXT(Salutation)+&apos; &apos;+FirstName+&apos; &apos;+LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>