force-app/main/default/objects/Contact/fields/PMC_SS_NumberOfInactivityDays__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_NumberOfInactivityDays__c</fullName>
    <formula>NOW() - PMC_SS_LastInteractionDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Inactivity Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>