force-app/main/default/objects/Contact/fields/PMC_SS_OrderPlacing__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_OrderPlacing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether the Contact is needed in SAP for Order placement</description>
    <label>Order Placing</label>
    <type>Checkbox</type>
</CustomField>