force-app/main/default/objects/Contact/fields/PMC_SS_ProductInterests__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ProductInterests__c</fullName>
    <description>Products contact is interested in</description>
    <label>Product Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_SS_ProductFamilies</valueSetName>
    </valueSet>
</CustomField>