force-app/main/default/objects/Contact/fields/PMC_SS_Results__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Results__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specifies the result of the Contact</description>
    <label>Results</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>