force-app/main/default/objects/Contact/fields/PMC_SS_SAP_CustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SAP_CustomerNumber__c</fullName>
    <description>Number for Contact stored in SAP</description>
    <externalId>true</externalId>
    <label>SAP Customer Number</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>