force-app/main/default/objects/Contact/fields/PMC_SS_ShippingNotification__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ShippingNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Notification</label>
    <type>Checkbox</type>
</CustomField>