force-app/main/default/objects/Contact/fields/PMC_SS_Status__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Status__c</fullName>
    <description>Status detailing if they are current or to-be archived</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>To be Archived</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>