force-app/main/default/objects/Contact/fields/PMC_SS_Type__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Type__c</fullName>
    <description>Specifies the Type of the Contact</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type</valueSetName>
    </valueSet>
</CustomField>